<resources>
    <string name="app_name" translatable="false">Kujon</string>
    <string name="contact_email" translatable="false">"kujon@kujon.mobi"</string>
    <string name="regulations_url" translatable="false">https://kujon.mobi/regulamin</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vulputate erat in velit luctus, eu rhoncus est venenatis. Praesent id quam ipsum. </string>
    <string name="no_item_decorator" translatable="false">NO_ITEM_DECORATOR</string>
    <string name="storage_permission" translatable="false">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="storage__read_permission" translatable="false">android.permission.READ_EXTERNAL_STORAGE</string>
    <string name="get_account_permission" translatable="false">android.permission.GET_ACCOUNTS</string>
    <string name="google" translatable="false">Google</string>
    <string name="regulations_info">By register you accept <![CDATA[<br/><u><font color=#FFFFFF>following conditions</u>]]></string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="delete_account">Delete account</string>
    <string name="contact_us">Contact us</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm"><![CDATA[Are you sure to delete Kujon account <b>%s</b>?]]></string>
    <string name="no_date">No data</string>
    <string name="no_photo">Empty photo</string>
    <string name="app_link">Hey check out this new app: https://play.google.com/store/apps/details?id=mobi.kujon</string>
    <string name="share_app">Share the app</string>
    <string name="course_title">Course</string>
    <string name="email_body">my comment:</string>
    <string name="faculty_title">Faculty</string>
    <string name="lecturer_title">Lecturer</string>
    <string name="login_title">Login</string>
    <string name="login_error">Login error</string>
    <string name="main_login_title">Login</string>
    <string name="plan_title">Schedule</string>
    <string name="regulations_activity_title">Regulations</string>
    <string name="regulations">Regulations</string>
    <string name="settings">Settings</string>
    <string name="email_subject">Comment</string>
    <string name="no_events">No events</string>
    <string name="search_minimum">Min. 4 chars</string>
    <string name="searching">Searching...</string>
    <string name="no_results_found">No results found</string>
    <string name="log_by" >Login by</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="search">Search</string>
    <string name="search_student_hint">Find student or employee</string>
    <string name="congratulations">Congratulations. You managed to lo in to your account at %1$s</string>
    <string name="grades">Grades</string>
    <string name="lectures">Courses</string>
    <string name="now_you_can">Now you can check your courses, grades, schedules...</string>
    <string name="teachers">Teachers</string>
    <string name="enable_notifications">Notifications grades and exams</string>
    <string name="enable_googlecalendar">Google Calendar</string>
    <string name="messages">Messages</string>
    <string name="sender">Sender</string>
    <string name="send_date">Send date</string>
    <string name="from">From:</string>
    <string name="date">Date:</string>
    <string name="details">Details</string>
    <string name="empty_message">Empty Message</string>
    <string name="study_level">Study Level</string>
    <string name="programme_duration">Programme time span</string>
    <string name="none">N/A</string>
    <string name="programme_id">Identifier</string>
    <string name="programme_mode">Studies Type</string>
    <string name="programme_name">Program name</string>
    <string name="programme">Programme</string>
    <string name="ects_sum">Sum of ECTS points</string>
    <string name="not_empty">Not empty</string>
    <string name="lecturers_plan">Schedule</string>
    <string name="no_data_for_month">No data for </string>
    <string name="action_settings">Settings</string>
    <string name="change_api_demo">demo mode on</string>
    <string name="change_api_prod" >production mode on</string>
    <string name="search_title">Search</string>
    <string name="server_communication_error">Error in server communication</string>
    <string name="empty_results">No Results Found</string>
    <string name="semester_choose">Choose semester</string>
    <string name="share_text">Share</string>
    <string name="share_with_everyone">Everyone within this course</string>
    <string name="share_with_chosen">Choose people within this course</string>
    <string name="file_details">File details</string>
    <string name="add_to_google_drive">Add to Google Drive</string>
    <string name="delete">Delete</string>
    <string name="share">SAVE</string>
    <string name="file_name">File Name</string>
    <string name="all_files">All files</string>
    <string name="by">by</string>
    <string name="courses_in">Course in</string>
    <string name="created_time">created</string>
    <string name="everyone">Everyone</string>
    <string name="file_type">Type</string>
    <string name="files_title">Shared files</string>
    <string name="my_files">My files</string>
    <string name="created_date">Date Created</string>
    <string name="who_has_access">Who has access</string>
    <string name="audio_file">Audio file</string>
    <string name="text_file">Text file</string>
    <string name="unknown_file">Unknown file type</string>
    <string name="pdf_file">PDF file</string>
    <string name="presentation_file">Presentation file</string>
    <string name="video_file">Video file</string>
    <string name="xls_file">Excel spreadsheet</string>
    <string name="add_from_google">To add files or notes to course edition \n please click + button </string>
    <string name="file_size">Filesize</string>
    <string name="image_file">Image</string>
    <string name="litlle_empty">no files or notes here</string>
    <string name="author">Author</string>
    <string name="choose_file_to_send_to_kujon">Choose file to send to KUJON</string>
    <string name="choose_folder">Choose destination dir</string>
    <string name="shared_files">Shared files</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="you_want_to_delete_this_file">You want do delete this file ?</string>
    <string name="choose_student">Share to</string>
    <string name="upload_failed">upload failed</string>
    <string name="sort_by">Sort</string>
    <string name="sort_by_author">Sort by owner</string>
    <string name="sort_by_create_date">Sort by date</string>
    <string name="sort_by_filename">Sort by filename</string>
    <string name="device_file">Add file from this device</string>
    <string name="google_drive_file">Add file from Google Drive</string>
    <string name="get_file">Get file</string>
    <string name="owner">File Owner</string>
    <string name="course_file">Course</string>
    <string name="term">Term</string>
    <string name="download_failed">Fail saving has failed</string>
    <string name="download_file">Save file on this device</string>
    <string name="shared_files_title">Shared files</string>
    <string name="app_version">Version</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="finish_date">Finish date</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="user">User</string>
    <string name="plan">Schedule</string>
    <string name="courses">Courses</string>
    <string name="students_and_staff">Students and Staff</string>
    <string name="twenty_more_results">20+results</string>
    <string name="organization_units">Organization Units</string>
    <string name="org_unit_name">Organization unit name</string>
    <string name="course_name">Course name</string>
    <string name="majors">Majors</string>
    <string name="major_name">Major name</string>
    <string name="thesiss">Thesis</string>
    <string name="thesis">Thesis</string>
    <string name="account_number">Account number</string>
    <string name="index_number">Index number</string>
    <string name="additional_information">Information</string>
    <string name="study_cycles">Study cycles</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="group">Group</string>
    <string name="type">Type</string>
    <string name="ok">OK</string>
    <string name="view_course">View course</string>
    <string name="description">Description</string>
    <string name="bibliography">Bibliography</string>
    <string name="grading_criteria">Grading criteria</string>
    <string name="classes_in_cycle">Classes in cycle</string>
    <string name="classes_type">Type of classes</string>
    <string name="group_instructor">Groups instructor</string>
    <string name="coordinators">Coordinators</string>
    <string name="students">Students</string>
    <string name="average_grade">average grade</string>
    <string name="deadline">deadline</string>
    <string name="final_grade_term_one">Final Grade, deadline: 1</string>
    <string name="tutorship">Tutorship</string>
    <string name="home_page">Home page</string>
    <string name="email">Email</string>
    <string name="interests">Interests</string>
    <string name="employment">Employment</string>
    <string name="courses_taught">Courses taught</string>
    <string name="search_results">Search Results</string>
    <string name="language">language</string>
    <string name="missing">N/A</string>
    <string name="is_currently_conducted">currently conducted</string>
    <string name="group_number">group number</string>
    <string name="usos_system_error">USOS System Error</string>
    <string name="number_of_programmes">Number of programmes</string>
    <string name="number_of_courses">Number of courses</string>
    <string name="number_of_staff">Number of stuff</string>
    <string name="no_faculty_information">No information about the faculty</string>
    <string name="unprocessable_address">Address can\'t be processed</string>
    <string name="check_usos">Check in USOS</string>
    <string name="choose_university">University choice</string>
    <string name="choose_your_university">Choose your university</string>
    <string name="no_university_message">If your university is not on the list it means it does not use the USOS system supported by Kujon. If you have got any remarks - write us :)</string>
    <string name="send_feedback">Send feedback</string>
    <string name="redirection_notice">You will now be redirected to the web page: </string>
    <string name="usos_login_notice">, to log into your USOS account.</string>
    <string name="back">Cofnij</string>
    <string name="university_unavailable">This university is not currently available</string>
    <string name="number">Number</string>
    <string name="return_to_today">Return to "today"</string>
    <string name="results">results</string>
    <string name="no_programme_desc">No program description</string>
    <string name="contniue_str">Continue</string>
    <string name="uni_usos_unavailable_msg">We are sorry, but the USOS system is currently unavailable for your university. Please try again later.</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="web_page">Web page</string>
</resources>