<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/one_and_half_typ_margin"
    android:orientation="vertical">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_sort"
        android:text="@string/sort_by_create_date"

        />
    <RadioButton
        android:layout_marginTop="@dimen/kujon_margin_typ"
        android:layout_marginBottom="@dimen/kujon_margin_typ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/file_name_sort"
        android:text="@string/sort_by_filename"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/author_sort"
        android:text="@string/sort_by_author"/>
</RadioGroup>