<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="15sp"
        android:textColor="@color/dark"
        android:id="@+id/file_name"
        android:paddingLeft="@dimen/small_margin"
        android:paddingStart="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/file_details_attributes"
            android:text="@string/file_type" />
        <TextView
            style="@style/file_details_attributes"
            android:layout_width="match_parent"
            tools:text="@string/file_type"
            android:textColor="@color/dark"
            android:id="@+id/file_type"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/file_details_attributes"
            android:text="@string/file_size" />
        <TextView
            style="@style/file_details_attributes"
            android:layout_width="match_parent"
            tools:text="@string/file_type"
            android:textColor="@color/dark"
            android:id="@+id/file_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/file_details_attributes"
            android:text="@string/created_date" />
        <TextView
            style="@style/file_details_attributes"
            android:layout_width="match_parent"
            tools:text="@string/file_type"
            android:textColor="@color/dark"
            android:id="@+id/file_creation_date"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        style="@style/file_details_attributes"
        android:layout_marginTop="20dp"
        android:text="@string/who_has_access"
        android:paddingTop="11dp"
        android:background="@color/pale_grey"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/file_details_attributes"
            android:text="@string/everyone"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/dark"
            android:layout_weight="1"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:paddingStart="@dimen/small_margin"
            android:layout_weight="0"
            android:id="@+id/share_with_everyone"/>
    </LinearLayout>
    <View
        style="@style/vh_divider"/>

</LinearLayout>