<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/kujon_toolbar_with_back" />
    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/photo_placeholder"/>

                <TextView
                    android:id="@+id/name"
                    style="@style/Semibold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/dark"
                    tools:text="Jan Kowalski"/>

                <TextView
                    android:id="@+id/lecturer_status"
                    style="@style/Regular"
                    android:layout_gravity="center"
                    android:textColor="@color/opacityBlack"
                    tools:text='Lorem ipsum'/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/label_background"
                    android:id="@+id/traklasa" />


                <TextView
                    style="@style/Regular.Label"
                    android:text="@string/tutorship"/>

                <TextView
                    android:id="@+id/lecturer_office_hours"
                    style="@style/Regular.Entry"
                    tools:text='Lorem ipsum'/>



                <TextView
                    style="@style/Regular.Label"
                    android:layout_marginTop="8dp"
                    android:text="@string/room"/>

                <TextView
                    android:id="@+id/lecturer_room"
                    style="@style/Regular.Entry"
                    tools:text='Lorem ipsum'/>



                <TextView
                    style="@style/Regular.Label"
                    android:text="@string/home_page"/>

                <TextView
                    android:id="@+id/lecturer_homepage"
                    style="@style/Regular.Entry"
                    android:autoLink="web"
                    tools:text='Lorem ipsum'/>

                <TextView
                    style="@style/Regular.Label"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/lecturer_email"
                    style="@style/Regular.Entry"
                    tools:text='Lorem ipsum'/>

                <TextView
                    style="@style/Regular.Label"
                    android:text="@string/interests"/>

                <TextView
                    android:id="@+id/lecturer_interests"
                    style="@style/Regular.Entry"
                    tools:text='Lorem ipsum'/>


                <TextView
                    style="@style/Regular.Label.Background"
                    android:text="@string/employment"/>


                <LinearLayout
                    android:id="@+id/lecturer_faculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <TextView
                    style="@style/Regular.Label.Background"
                    android:layout_marginTop="0dp"
                    android:text="@string/courses_taught"/>

                <LinearLayout
                    android:id="@+id/lecturer_courses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>