<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/kujon_toolbar_with_back" />


    <RelativeLayout
        android:id="@+id/enable_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="32dp"
            android:text="@string/enable_notifications"
            android:textColor="@color/dark" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/notifications_enabler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/enable_googlecalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="32dp"
            android:text="@string/enable_googlecalendar"
            android:textColor="@color/dark" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/googlecalendar_enabler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        style="@style/divider"
        android:layout_width="match_parent"
        android:layout_height="12dp" />


    <LinearLayout
        android:id="@+id/regulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/terms" />

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/regulations"
            android:textColor="@color/dark" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/share" />

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/share_app"
            android:textColor="@color/dark" />
    </LinearLayout>

    <View style="@style/divider" />


    <LinearLayout
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/contact_us" />

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/contact_us"
            android:textColor="@color/dark" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/logout" />

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/logout"
            android:textColor="@color/dark" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/remove_account" />

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/delete_account"
            android:textColor="@color/dark" />
    </LinearLayout>
    <View
        style="@style/divider"
        android:layout_width="match_parent"
        android:layout_height="12dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            style="@style/Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/app_version"
            android:textColor="@color/dark" />

        <TextView
            style="@style/Regular"
            android:id="@+id/app_version_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Kujon 1.8"
            android:textColor="@color/dark_60" />
    </RelativeLayout>
</LinearLayout>